# kargo_backend

./: LICENSE  pyproject.toml  utils.py
baskets/: admin.py  models.py  queries.py  schema.py  serializers.py  types.py  urls.py  views.py
baskets/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
brands/: models.py
brands/migrations/: 0001_initial.py  0002_initial.py
carts/: admin.py  likesurls.py  models.py  queries.py  schema.py  serializers.py  types.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_cartitem_coupon_alter_cart_user.py  0005_cart_cart_items_cart_total_weight_and_more.py  0006_alter_cart_total_weight.py
categories/: admin.py  models.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: authentication.py  schema.py  settings.py  urls.py
coupons/: admin.py  models.py
coupons/migrations/: 0001_initial.py  0002_initial.py  0003_remove_coupon_brand_coupon_brands_coupon_name_and_more.py  0004_alter_coupon_code.py
direct_message/: admin.py  apps.py  models.py
group_purchases/: apps.py  models.py
likes/: models.py
medias/: admin.py  models.py  types.py
medias/migrations/: 0001_initial.py  (+1 more)
notifications/: admin.py  models.py
orders/: admin.py  models.py
products/: admin.py  models.py  serializers.py  types.py
referrals/: models.py
reviews/: admin.py  models.py
sellers/: models.py
shipments/: admin.py  models.py
users/: admin.py  models.py  queries.py  schema.py  sellersurls.py  sellersviews.py  serializers.py  types.py  urls.py  views.py
(+24 files in other folders)
